@@ -2,23 +2,28 @@ Creator: Kevin Holt
 Date: 2022.12.03 (YMD)
 Project: Magic: The Gathering Deck Designer
 
-To run the program, compile 'Test.java' then run the 'Test' class
+To run the program, compile 'init.java' then run the 'init' class
 	Commands (input into a command prompt terminal):
-		MTG Deck Designer/src >  javac Test.java
-		MTG Deck Designer/src >  java Test
+		MTG Deck Designer/ >  javac --module-path "<PATH-TO-JAVAFX-JAR>" --add-modules javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web init.java
+		MTG Deck Designer/ >  java --module-path "<PATH-TO-JAVAFX-JAR>" --add-modules javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web init.java
 
 Disclaimer:
 	This project is currently set up for a mySQL database on 'localhost:3306'
-	Database data is set up using the .sql file downloaded from 'htts://mtgjson.com'
+	Database data is set up using the AllPrintings.sql file downloaded from 'htts://mtgjson.com'
 	Database info can easily be adjusted at the top of the 'CardDatabase.java' file
 		'final String' constants are provided at the top of the class
 
 File Structure:
+	init.java
 	README.txt
-	AllPrintings.sql
 	src/
 		Test.java
+		gui/
+			sceneCreateDeck.java
+			sceneEditDeck.java
+			sceneMain.java
+			Window.java
 		MTG/
 			Card.java
-			Deck.java
 			CardDatabase.java
+			Deck.java
